creating a event via swagger works!
