# event-landvanons-api/storage/api-docs/api-docs.json
@@ -30,6 +30,7 @@
                     "Events"
                 ],
                 "summary": "Create a Events",
+                "description": "//     * @OA\\Post(\npath=\"/api/v1/events\",\noperationId=\"createEvent\",\ntags={\"Events\"},\nsummary=\"Create a Events\",",
                 "operationId": "createEvent",
                 "requestBody": {
                     "required": true,
@@ -37,35 +38,35 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "event_name": {
+                                    "eventName": {
                                         "type": "string",
                                         "example": "Updated event"
                                     },
-                                    "begin_time": {
+                                    "beginTime": {
                                         "type": "string",
-                                        "format": "date-time"
+                                        "format": "date"
                                     },
-                                    "end_time": {
+                                    "endTime": {
                                         "type": "string",
-                                        "format": "date-time"
+                                        "format": "date"
                                     },
-                                    "street_name": {
+                                    "streetName": {
                                         "type": "string",
                                         "example": "street name"
                                     },
-                                    "house_number": {
+                                    "houseNumber": {
                                         "type": "string",
                                         "example": "Updated house_number"
                                     },
-                                    "postal_code": {
+                                    "postalCode": {
                                         "type": "string",
                                         "example": "Updated postal code"
                                     },
-                                    "amount_of_volunteers_needed": {
+                                    "amountOfVolunteersNeeded": {
                                         "type": "number",
                                         "example": 5
                                     },
-                                    "descriptipn": {
+                                    "eventDescription": {
                                         "type": "string",
                                         "example": "Updated description"
                                     }
@@ -84,9 +85,6 @@
                     },
                     "401": {
                         "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
                     }
                 }
             }
